--- a/templates/edit.html
+++ b/templates/edit.html
@@ -2,7 +2,7 @@
 {% block body %}
   <div class='row'>
     <div class='col-5 mx-auto'>
-      <h3>Edit Students</h3><hr>
+      <h3>Edit Student</h3><hr>
       <form method='post' action='{{url_for("edit",id=datas.id)}}'>
         <div class='form-group'>
           <label>Name</label>
